--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,10 +1,18 @@
 name: Run Decoder
 
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
+#   workflow_dispatch:
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+    paths:
+      - 'Dockerfile'
+      - 'subgraph_mining/**'
+      - 'data/**'
   workflow_dispatch:
 
 jobs:
