train if required

--- a/.github/workflows/align.yml
+++ b/.github/workflows/align.yml
@@ -1,11 +1,11 @@
 name: Run Alignment Script
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
+#   workflow_dispatch:
 
 jobs:
   run-alignment:
